--- a/Workspace/GNU ARM v4.8.3 - Debug/makefile
+++ b/Workspace/GNU ARM v4.8.3 - Debug/makefile
@@ -10,6 +10,8 @@ RM := rm -rf
 -include sources.mk
 -include src/subdir.mk
 -include emlib/subdir.mk
+-include CMSIS/efm32gg/subdir.mk
+-include BSP/subdir.mk
 -include subdir.mk
 -include objects.mk
 
@@ -24,31 +26,31 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: Domotica_2.axf
+all: Domotica.axf
 
 # Tool invocations
-Domotica_2.axf: $(OBJS) $(USER_OBJS)
+Domotica.axf: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GNU ARM C Linker'
-	arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m3 -mthumb -T "Domotica_2.ld" -Xlinker --gc-sections -Xlinker -Map="Domotica_2.map" --specs=nano.specs -o Domotica_2.axf "./src/Relais.o" "./src/main.o" "./emlib/em_assert.o" "./emlib/em_cmu.o" "./emlib/em_ebi.o" "./emlib/em_emu.o" "./emlib/em_gpio.o" "./emlib/em_system.o" "./emlib/em_usart.o" -Wl,--start-group -lgcc -lc -lnosys -Wl,--end-group
+	arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m3 -mthumb -T "Domotica.ld" -Xlinker --gc-sections -Xlinker -Map="Domotica.map" --specs=nano.specs -o Domotica.axf "./src/Relais.o" "./src/main.o" "./emlib/em_assert.o" "./emlib/em_cmu.o" "./emlib/em_ebi.o" "./emlib/em_emu.o" "./emlib/em_gpio.o" "./emlib/em_system.o" "./emlib/em_usart.o" "./CMSIS/efm32gg/startup_efm32gg.o" "./CMSIS/efm32gg/system_efm32gg.o" "./BSP/bsp_bcc.o" "./BSP/bsp_stk.o" "./BSP/bsp_stk_leds.o" "./BSP/bsp_trace.o" -Wl,--start-group -lgcc -lc -lnosys -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-	@echo 'Building hex file: Domotica_2.hex'
-	arm-none-eabi-objcopy -O ihex "Domotica_2.axf" "Domotica_2.hex"
+	@echo 'Building hex file: Domotica.hex'
+	arm-none-eabi-objcopy -O ihex "Domotica.axf" "Domotica.hex"
 	@echo ' '
 
-	@echo 'Building bin file: Domotica_2.bin'
-	arm-none-eabi-objcopy -O binary "Domotica_2.axf" "Domotica_2.bin"
+	@echo 'Building bin file: Domotica.bin'
+	arm-none-eabi-objcopy -O binary "Domotica.axf" "Domotica.bin"
 	@echo ' '
 
 	@echo 'Running size tool'
-	arm-none-eabi-size "Domotica_2.axf"
+	arm-none-eabi-size "Domotica.axf"
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C_DEPS)$(EXECUTABLES) Domotica_2.axf
+	-$(RM) $(OBJS)$(C_DEPS)$(EXECUTABLES) Domotica.axf
 	-@echo ' '
 
 .PHONY: all clean dependents
