--- a/Workspace_Domotica/GNU ARM v4.8.3 - Debug/makefile
+++ b/Workspace_Domotica/GNU ARM v4.8.3 - Debug/makefile
@@ -50,7 +50,7 @@ Workspace_Domotica.axf: $(OBJS) $(USER_OBJS)
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C_DEPS)$(EXECUTABLES) Workspace_Domotica.axf
+	-$(RM) $(EXECUTABLES)$(OBJS)$(C_DEPS) Workspace_Domotica.axf
 	-@echo ' '
 
 .PHONY: all clean dependents
