--- a/Workspace_Domotica/.cproject
+++ b/Workspace_Domotica/.cproject
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?>
-
-<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="com.silabs.ide.si32.gcc.debug#com.silabs.ide.si32.gcc:4.8.3.20131129">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="com.silabs.ide.si32.gcc.debug#com.silabs.ide.si32.gcc:4.8.3.20131129" moduleId="org.eclipse.cdt.core.settings" name="GNU ARM v4.8.3 - Debug">
@@ -39,13 +37,12 @@
 								<option id="com.silabs.ide.si32.gcc.cdt.managedbuild.tool.gnu.c.compiler.debug.builtin.1365486085" name="Always branch to builtin functions (-fno-builtin)" superClass="com.silabs.ide.si32.gcc.cdt.managedbuild.tool.gnu.c.compiler.debug.builtin" value="true" valueType="boolean"/>
 								<option id="com.silabs.ide.si32.gcc.cdt.managedbuild.tool.gnu.c.compiler.debug.prolog.580824519" name="Generate debugger-friendly prologs (-mno-sched-prolog)" superClass="com.silabs.ide.si32.gcc.cdt.managedbuild.tool.gnu.c.compiler.debug.prolog" value="true" valueType="boolean"/>
 								<option id="gnu.c.compiler.option.include.paths.1018560690" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/Applications/SimplicityStudio_v3/developer/sdks/efm32/v2/reptile/glib"/>
+									<listOptionValue builtIn="false" value="/Applications/SimplicityStudio_v3/developer/sdks/efm32/v2/reptile/glib/glib"/>
+									<listOptionValue builtIn="false" value="/Applications/SimplicityStudio_v3/developer/sdks/efm32/v2/reptile/glib/dmd"/>
+									<listOptionValue builtIn="false" value="/Applications/SimplicityStudio_v3/developer/sdks/efm32/v2/reptile/glib/dmd/ssd2119"/>
 									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/kits/SLSTK3400A_EFM32HG/config&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/reptile/glib/dmd/ssd2119"/>
-									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/reptile/glib/glib"/>
-									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/reptile/glib/dmd"/>
-									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/reptile/glib/glib"/>
-									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/kits/SLSTK3400A_EFM32HG/examples/clock"/>
-									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/reptile/glib"/>
+									<listOptionValue builtIn="false" value="/Applications/SimplicityStudio_v3/developer/sdks/efm32/v2/kits/SLSTK3400A_EFM32HG/examples/clock"/>
 									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/kits/common/bsp&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/emlib/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/CMSIS/Include&quot;"/>
@@ -200,10 +197,10 @@
 		</scannerConfigBuildInfo>
 	</storageModule>
 	<storageModule moduleId="refreshScope" versionNumber="2">
-		<configuration configurationName="GNU ARM v4.8.3 - Release">
+		<configuration configurationName="GNU ARM v4.8.3 - Debug">
 			<resource resourceType="PROJECT" workspacePath="/Workspace_Domotica"/>
 		</configuration>
-		<configuration configurationName="GNU ARM v4.8.3 - Debug">
+		<configuration configurationName="GNU ARM v4.8.3 - Release">
 			<resource resourceType="PROJECT" workspacePath="/Workspace_Domotica"/>
 		</configuration>
 	</storageModule>
