--- a/Workspace_Domotica/GNU ARM v4.8.3 - Debug/makefile
+++ b/Workspace_Domotica/GNU ARM v4.8.3 - Debug/makefile
@@ -13,7 +13,6 @@ RM := rm -rf
 -include Graphics/subdir.mk
 -include Drivers/subdir.mk
 -include CMSIS/efm32hg/subdir.mk
--include BSP/subdir.mk
 -include subdir.mk
 -include objects.mk
 
@@ -34,7 +33,7 @@ all: Workspace_Domotica.axf
 Workspace_Domotica.axf: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GNU ARM C Linker'
-	arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m0plus -mthumb -T "Workspace_Domotica.ld" -Xlinker --gc-sections -Xlinker -Map="Workspace_Domotica.map" --specs=nano.specs -o Workspace_Domotica.axf "./src/Displaymodule.o" "./src/Klok.o" "./src/Main.o" "./src/Relais.o" "./src/Watchdog.o" "./emlib/em_assert.o" "./emlib/em_cmu.o" "./emlib/em_ebi.o" "./emlib/em_emu.o" "./emlib/em_gpio.o" "./emlib/em_int.o" "./emlib/em_leuart.o" "./emlib/em_prs.o" "./emlib/em_rtc.o" "./emlib/em_system.o" "./emlib/em_usart.o" "./Graphics/dmd_display.o" "./Graphics/glib.o" "./Graphics/glib_bitmap.o" "./Graphics/glib_circle.o" "./Graphics/glib_font_narrow_6x8.o" "./Graphics/glib_font_normal_8x8.o" "./Graphics/glib_font_number_16x20.o" "./Graphics/glib_line.o" "./Graphics/glib_rectangle.o" "./Graphics/glib_string.o" "./Drivers/display.o" "./Drivers/displayls013b7dh03.o" "./Drivers/displaypalemlib.o" "./Drivers/retargetio.o" "./Drivers/retargettextdisplay.o" "./Drivers/textdisplay.o" "./Drivers/udelay.o" "./CMSIS/efm32hg/startup_gcc_efm32hg.o" "./CMSIS/efm32hg/system_efm32hg.o" "./BSP/bsp_bcc.o" "./BSP/bsp_stk.o" "./BSP/bsp_stk_leds.o" "./BSP/bsp_trace.o" -Wl,--start-group -lgcc -lc -lnosys -Wl,--end-group
+	arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m0plus -mthumb -T "Workspace_Domotica.ld" -Xlinker --gc-sections -Xlinker -Map="Workspace_Domotica.map" --specs=nano.specs -o Workspace_Domotica.axf "./src/Displaymodule.o" "./src/Klok.o" "./src/Main.o" "./src/Programmatie.o" "./src/Relais.o" "./src/Watchdog.o" "./emlib/em_assert.o" "./emlib/em_cmu.o" "./emlib/em_ebi.o" "./emlib/em_emu.o" "./emlib/em_gpio.o" "./emlib/em_int.o" "./emlib/em_leuart.o" "./emlib/em_prs.o" "./emlib/em_rtc.o" "./emlib/em_system.o" "./emlib/em_usart.o" "./Graphics/dmd_display.o" "./Graphics/glib.o" "./Graphics/glib_bitmap.o" "./Graphics/glib_circle.o" "./Graphics/glib_font_narrow_6x8.o" "./Graphics/glib_font_normal_8x8.o" "./Graphics/glib_font_number_16x20.o" "./Graphics/glib_line.o" "./Graphics/glib_rectangle.o" "./Graphics/glib_string.o" "./Drivers/display.o" "./Drivers/displayls013b7dh03.o" "./Drivers/displaypalemlib.o" "./Drivers/retargetio.o" "./Drivers/retargettextdisplay.o" "./Drivers/textdisplay.o" "./Drivers/udelay.o" "./CMSIS/efm32hg/startup_gcc_efm32hg.o" "./CMSIS/efm32hg/system_efm32hg.o" -Wl,--start-group -lgcc -lc -lnosys -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -52,7 +51,7 @@ Workspace_Domotica.axf: $(OBJS) $(USER_OBJS)
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C_DEPS)$(EXECUTABLES) Workspace_Domotica.axf
+	-$(RM) $(EXECUTABLES)$(OBJS)$(C_DEPS) Workspace_Domotica.axf
 	-@echo ' '
 
 .PHONY: all clean dependents
